wacc/test/golden/syntaxErr.sequence.emptySeq
# extra sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin ; end


In test/wacc_examples/invalid/syntaxErr/sequence/emptySeq.wacc (line 11, column 7):
  unexpected ";"
  expected begin, bool, char, exit, free, fst, identifier, if, int, pair, print, println, read, return, skip, snd, string, or while
  >
  >begin ; end
         ^
  >